--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">ecochat</string>
-    <string name="title_activity_main">ecochat</string>
+    <string name="app_name">Ecochat</string>
+    <string name="title_activity_main">Ecochat</string>
     <string name="package_name">com.ecochat.myapp</string>
     <string name="custom_url_scheme">com.ecochat.myapp</string>
 </resources>
